fix(ui): update colors for inline code in dark mode

--- a/assets/scss/_alerts.scss
+++ b/assets/scss/_alerts.scss
@@ -1,5 +1,5 @@
 // Bootstrap alerts.
-html[data-theme="dark"] {
+html[data-theme=dark] {
 
     // Generate contextual modifier classes for colorizing the alert.
     @each $state,
@@ -31,13 +31,20 @@ html[data-theme="dark"] {
             }
 
             strong {
-                color: color-mix(in srgb, #{$alert-color} 80%, #fff 20%);
+                --bold-color: color-mix(in srgb, #{$alert-color} 80%, #fff 20%);
             }
         }
     }
 
     .alert-secondary {
         --bs-alert-bg: var(--light-background-color);
+    }
+}
+
+html[data-theme=light] {
+    strong {
+        // color: color-mix(in srgb, #{$alert-color} 80%, #fff 20%);
+        --bold-color: var(--bs-alert-color);
     }
 }
 
