--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -98,6 +98,10 @@ blockquote {
     border-left: $border-width-thick solid #3642df;
 }
 
+html[data-theme=dark] code {
+    --bs-code-color: #f8c555;
+}
+
 form {
     --bs-body-color: #212529;
 }
